--- a/resources/views/partials/components/bard.antlers.html
+++ b/resources/views/partials/components/bard.antlers.html
@@ -9,7 +9,7 @@
         {{ if type == 'collapsibles' }}
           <div class="mt-36 xl:mt-72">
             {{ if title }}
-              <h3 class="text-lg mb-32">{{ title }}</h3>
+              <h3 class="text-lg leading-8 mb-32">{{ title }}</h3>
             {{ /if }}
             {{ collapsible }}
               {{ partial:components/collapsible }}
