--- a/resources/views/partials/components/cards.antlers.html
+++ b/resources/views/partials/components/cards.antlers.html
@@ -1,6 +1,6 @@
 <section class="{{ if background_color }} theme-{{ background_color }} {{ /if }} py-72 xl:py-108">
   <div class="container">
-    <h3 class=" text-xl {{ if text }} mb-9 xl:mb-18 {{ else }} mb-36 xl:mb-72 {{ /if }}">{{ title }}</h3>
+    <h3 class="text-xl leading-8 {{ if text }} mb-9 xl:mb-18 {{ else }} mb-36 xl:mb-72 {{ /if }}">{{ title }}</h3>
     {{  if text }}
       <div class="text-md mb-36 xl:mb-56">
         {{ text }}
