--- a/resources/views/partials/components/jobs.antlers.html
+++ b/resources/views/partials/components/jobs.antlers.html
@@ -1,6 +1,6 @@
 <section class="{{ if background_color }} theme-{{ background_color }} {{ /if }} py-72 xl:py-108">
   <div class="container">
-    <h3 class="text-xl mb-27">{{ title }}</h3>
+    <h3 class="text-xl leading-8 mb-27">{{ title }}</h3>
     {{ if text }}
       <div class="text-md leading-8">
         {{ text }}
