--- a/resources/views/partials/components/text_image.antlers.html
+++ b/resources/views/partials/components/text_image.antlers.html
@@ -8,7 +8,7 @@
       {{ /if }}
       {{ if text }}
         <div class="lg:col-span-1 text-base leading-8 flex flex-col justify-center {{ if order == 'text-image'}} lg:order-1 {{ /if }}">
-          <h3 class=" text-lg mb-18 lg:text-xl">{{ title }}</h3>
+          <h3 class="text-lg leading-8 mb-18 lg:text-xl">{{ title }}</h3>
           {{ text }}
           {{ if link }}
             <div class="mt-32 lg:mt-48">
