--- a/resources/views/partials/components/collapsible.antlers.html
+++ b/resources/views/partials/components/collapsible.antlers.html
@@ -1,6 +1,6 @@
 <details class="border-t last-of-type:border-b border-cloud-mist {{ class }}">
   <summary class="flex items-start leading-none justify-between cursor-pointer py-16 lg:py-27 group">
-    <h3 class="select-none text-left font-normal leading-tight group-hover:text-azure transition-all">{{ title }}</h3>
+    <h3 class="select-none text-left font-normal leading-tight pr-6 leading-6 group-hover:text-azure transition-all">{{ title }}</h3>
     {{ partial:icons/chevron-right class="close w-7 shrink-0 mt-7 group-hover:text-azure transition-all" }}
     {{ partial:icons/chevron-down class="open h-4 shrink-0 mt-7 group-hover:text-azure transition-all" }}
   </summary>
