--- a/resources/views/partials/components/link.antlers.html
+++ b/resources/views/partials/components/link.antlers.html
@@ -11,7 +11,10 @@
 {{ /if }}
 
 {{ if link_type == 'text' }}
-  <a href="{{ link }}" class="text-azure hover:text-azure-dark hover:underline underline-offset-4 transition-all inline-flex group">
+  <a 
+    href="{{ link }}" class="text-azure hover:text-azure-dark hover:underline underline-offset-4 transition-all inline-flex group"
+    target="{{ link_target }}"
+    title="{{ link_text }}">
     {{ link_text }}
     {{ if link_icon != 'null' }}
       {{ partial:icons/{{link_icon}} class="ml-8 group-hover:translate-y-2" }}
