--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer {{ if is_homepage }} mt-36 lg:mt-72 xl:mt-108 {{ /if }}">
   <div>
     <div class="md:grid md:grid-cols-12 md:gap-24">
       <div class="md:col-span-4">
