--- a/resources/views/partials/components/team/list.antlers.html
+++ b/resources/views/partials/components/team/list.antlers.html
@@ -3,12 +3,12 @@
     {{ if title }}
       <h2 class="text-xl mb-32">{{ title }}</h2>
     {{ /if }}
-    <div class="mb-36 xl:mb-72">
+    <div class="mb-36 xl:mb-56">
       {{ text }}
     </div>
     <div class="sm:grid sm:grid-cols-12 sm:gap-18">
       {{ collection:team sort="name" }}
-        {{ partial:components/team_member }}
+        {{ partial:components/team/card }}
       {{ /collection:team }}
     </div>
   </div>
