--- a/resources/views/partials/components/locations.antlers.html
+++ b/resources/views/partials/components/locations.antlers.html
@@ -1,3 +1,4 @@
+<a name="standorte" class="scroll-mt-[112px] lg:scroll-mt-[128px]"></a>
 <section class="bg-snow lg:min-h-[280px] lg:min-h-[320px] py-72 xl:py-108">
   <div class="container">
     <div class="md:grid md:grid-cols-12 md:gap-x-56 -mt-140 md:-mt-160 lg:-mt-180 xl:-mt-200 relative z-80">
