--- a/resources/css/layout/base.css
+++ b/resources/css/layout/base.css
@@ -10,7 +10,11 @@ body {
 }
 
 main {
-  @apply flex-1  z-40;
+  @apply flex-1 z-40;
+}
+
+article .text-content:not(:first-of-type) {
+  @apply mt-36 xl:mt-72;
 }
 
 .container {
