--- a/resources/views/partials/components/locations.antlers.html
+++ b/resources/views/partials/components/locations.antlers.html
@@ -17,8 +17,8 @@
       </div>
       <div class="md:col-span-4 text-md py-36 px-12 lg:p-56 flex flex-col items-center justify-start  bg-white shadow-[0px_0px_30px_rgba(0,0,0,0.075)]">
         {{ partial:icons/pin class="w-24 h-auto text-azure" }}
-        <h3 class="text-lg mt-27">E-Mail</h3>
-        <a href="https://goo.gl/maps/ErUWFKcXXYRT7Gaz5" class="mt-9 text-center hover:underline hover:text-graphite decoration-1 underline-offset-4 transition-all">
+        <h3 class="text-lg mt-27">Geschäftsadresse</h3>
+        <a href="https://goo.gl/maps/ErUWFKcXXYRT7Gaz5" target="_blank" rel="noopener" class="mt-9 text-center hover:underline hover:text-graphite decoration-1 underline-offset-4 transition-all">
           {{ contact_information:address | nl2br }}
         </a>
       </div>
