--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="mt-32 md:col-span-12">
-        <div>&copy; 2022 alphacare. Alle Rechte vorbehalten.</div>
+        <div>&copy; {{ date iso_format="YYYY" }} alphacare. Alle Rechte vorbehalten.</div>
       </div>
     </div>
   </div>
