--- a/resources/views/partials/components/banner.antlers.html
+++ b/resources/views/partials/components/banner.antlers.html
@@ -1,5 +1,5 @@
 <section class="theme-{{ background_color }} {{ if background_color != 'light-gray'}} text-white {{ /if }} py-72 xl:py-108">
-  <div class="container flex flex-col justify-center items-center md:text-center">
+  <div class="container flex flex-col md:justify-center items-center md:text-center">
     <h2 class="text-xl lg:text-2xl leading-tight max-w-3xl {{ if text }} mb-36 {{ /if }}">
       {{ title }}
     </h2>
