--- a/resources/views/templates/layout.antlers.html
+++ b/resources/views/templates/layout.antlers.html
@@ -32,4 +32,5 @@
   </main>
   {{ partial:layout/footer }} 
 </body>
+<script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/9756476cf08cf00a9ea3f690/script.js"></script>
 </html>
