--- a/resources/views/partials/components/locations.antlers.html
+++ b/resources/views/partials/components/locations.antlers.html
@@ -59,6 +59,7 @@
               <a 
                 href="{{ website }}" 
                 title="Besuchen Sie unsere {{ website }}"
+                target="_blank"
                 class="flex hover:underline hover:text-graphite decoration-1 underline-offset-4 transition-all">
                 Zur Webseite der Klinik
                 {{ partial:icons/arrow-right class="ml-7 mt-2 text-graphite" }}
