--- a/resources/views/partials/components/masthead.antlers.html
+++ b/resources/views/partials/components/masthead.antlers.html
@@ -7,7 +7,7 @@
         {{ title }}
       </h1>
       {{ if byline }}
-        <div>
+        <div class="font-semibold text-center text-white text-md md:text-xxl xl:text-2xl mt-24 xl:mt-36">
           {{ byline }}
         </div>
       {{ /if }}
