--- a/resources/views/partials/components/team/card.antlers.html
+++ b/resources/views/partials/components/team/card.antlers.html
@@ -9,7 +9,7 @@
       {{ /if }}
       <figcaption class="absolute left-0 top-0 w-full h-full text-white bg-black bg-opacity-20 flex items-end">
         <div class="p-18 xl:p-27">
-          <div class="text-md leading-6 mb-9">{{ firstname }} {{ name }}</div>
+          <div class="text-md leading-6 mb-9">{{ job_title }}<br>{{ firstname }} {{ name }}</div>
           <div class="text-tiny leading-5">{{ function | nl2br }}</div>
         </div>
       </figcaption>
@@ -22,7 +22,7 @@
     {{ /if }}
     <figcaption class="absolute left-0 top-0 w-full h-full text-white bg-black bg-opacity-20 flex items-end">
       <div class="p-18 xl:p-27">
-        <div class="text-md leading-6 mb-9">{{ firstname }} {{ name }}</div>
+        <div class="text-md leading-6 mb-9">{{ job_title }}<br>{{ firstname }} {{ name }}</div>
         <div class="text-tiny leading-5">{{ function | nl2br }}</div>
       </div>
     </figcaption>
