--- a/resources/views/templates/content/team-member.antlers.html
+++ b/resources/views/templates/content/team-member.antlers.html
@@ -10,7 +10,7 @@
       <div class="md:col-span-7 lg:col-span-8">
 
         {{ if job_title }}
-          <h2 class="text-xl lg:text-2xl text-azure uppercase tracking-widest mb-12 lg:mb-36">
+          <h2 class="text-xl lg:text-2xl text-azure tracking-widest mb-12 lg:mb-36">
             {{ job_title }}
           </h2>
         {{ /if }}
