--- a/resources/views/partials/components/team/list.antlers.html
+++ b/resources/views/partials/components/team/list.antlers.html
@@ -6,7 +6,7 @@
     <div class="mb-36 xl:mb-56">
       {{ text }}
     </div>
-    <div class="sm:flex sm:gap-x-18 mb-18 sm:mb-24 max-w-1\2">
+    <div class="sm:flex sm:gap-x-18 mb-18 sm:mb-24 max-w-[50%]">
       {{ taxonomy:categories }}
         <a 
           href="javascript:;" 
