--- a/resources/views/partials/components/team/list.antlers.html
+++ b/resources/views/partials/components/team/list.antlers.html
@@ -21,7 +21,7 @@
         href="javascript:;"
         class="font-regular text-xxs lg:text-xs !text-graphite bg-transparent inline-flex underline hover:no-underline items-center leading-none w-auto !px-0 lg:py-12 !is-hidden"
         data-reset-btn>
-        Zurücksetzen
+        Filter Zurücksetzen
       </a>
     </div>
 
