--- a/resources/views/partials/components/team/list.antlers.html
+++ b/resources/views/partials/components/team/list.antlers.html
@@ -7,7 +7,7 @@
       {{ text }}
     </div>
     <div class="mb-18 sm:mb-24">
-      <select data-categories class="bg-transparent !ring-0 border !border-graphite ">
+      <select data-categories class="bg-transparent !ring-0 border !border-graphite w-full sm:w-auto">
         <option value="all">Alle</option>
         {{ taxonomy:categories }}
           <option value="{{ slug }}">{{ title }}</option>
@@ -15,7 +15,7 @@
       </select>
       <a 
         href="javascript:;"
-        class="font-regular text-xxs lg:text-xs !text-graphite bg-transparent inline-flex ml-18 underline hover:no-underline items-center leading-none w-auto !px-0 lg:py-12 !is-hidden"
+        class="font-regular text-xxs lg:text-xs !text-graphite bg-transparent inline-flex mt-18 sm:mt-0 sm:ml-18 underline hover:no-underline items-center leading-none w-auto !px-0 lg:py-12 !is-hidden"
         data-reset-btn>
         Filter Zurücksetzen
       </a>
