--- a/resources/views/partials/components/team/list.antlers.html
+++ b/resources/views/partials/components/team/list.antlers.html
@@ -6,7 +6,7 @@
     <div class="mb-36 xl:mb-56">
       {{ text }}
     </div>
-    <div class="mb-18 sm:mb-24">
+    <div class="mb-24">
       <select data-categories class="bg-transparent !ring-0 border !border-graphite w-full sm:w-auto">
         <option value="all">Alle</option>
         {{ taxonomy:categories }}
